# ChangeLog for app-doc/phrack
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-doc/phrack/ChangeLog,v 1.15 2008/05/10 10:32:02 vapier Exp $

*phrack-* (11 Feb 2003)

  11 Feb 2003; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuilds submitted by me.