@@ -63,6 +63,7 @@ DIST phrack62.tar.gz 346028 RMD160 67c9d9ebdb574395b9d4ce7256d0cc01c6cfe18e SHA1
 DIST phrack63.tar.gz 510946 RMD160 807e603db605cf69871bb5ded1d923db9b02488c SHA1 973908becdd05e056c85ba5fc425d098f0731098 SHA256 32a3427c4ddef4cf274110f6abb0c9cb95a92ce308265aa82eab4f6a3ec53f13
 DIST phrack64.tar.gz 372474 RMD160 ec6d6c0e016a4946de5aebdb6f1721ac9266eb90 SHA1 9b3a94978bfea952a38734d0c93d0cd8c396757a SHA256 00f30e4d9bef0d50250a1c8179bece264131faa95ea263cc2f74d269e82be401
 DIST phrack65.tar.gz 1253258 RMD160 57fb66d85a27605aa0c210fa6a757607ea2a2968 SHA1 559dfc7307a544fd5973f4e09ee2475a732520fe SHA256 5114ec6adfd66b13b36e5bc248d1590e87ccf9c9f3c48ba5aa900bbc827e3e01
+DIST phrack66.tar.gz 447757 RMD160 d94957d78a41c83ca559c3848a7b75595b6c6746 SHA1 f7657ecff1caed409015c38b0c4e4f04ba5a5524 SHA256 63ebcba5fe533f2e6a8d1af9e2b8f18753423141dbd4728f0e84d64554a227ac
 EBUILD phrack-01.ebuild 636 RMD160 a37fa4bd37315ee7c182493228384b8d36f55677 SHA1 b1275a309e71412b32e8a775958917795ff54fcf SHA256 69fa6c2a5fae8705bd611d9fd08061bf8d13dcff7b98b399a1db6e54e8c6d0c9
 EBUILD phrack-02.ebuild 636 RMD160 cc0d29549acf7a1b5e01dbffffc2a996be2efd71 SHA1 1ec60f1cb8ac82213434bd7aa2a9c42bf0dd9f96 SHA256 feb0b1f472e2f2fc6cad62b670f94548be662ec13863161ca228e386430067ec
 EBUILD phrack-03.ebuild 636 RMD160 7963b4ebd33327dcf58c529c3372f66371d9b955 SHA1 280a428d95c432938c4d42c0cf41b40264ac1982 SHA256 afe70374af73fb18af921e7329ddb36dc04d9a468d6b68bdc27b430e413bc253
@@ -128,5 +129,6 @@ EBUILD phrack-62.ebuild 635 RMD160 c8623ae666143d1722a89671a5f88cf4b2a9fa5d SHA1
 EBUILD phrack-63.ebuild 635 RMD160 aa1f32757ce29c43f9a2e8306264fa30d9bb9ae8 SHA1 042b088ef28b675ab79ee85166a3234fcc781f2e SHA256 a1919cc56d50919a5d9ae26838704ea107863cf1c087024c6cb5d90bd05129d8
 EBUILD phrack-64.ebuild 635 RMD160 5a173f7d2277d4c2475ed5699ed3d6b167920894 SHA1 1159bd5a303164f7872aea85b5da9cd5c709375a SHA256 7dd0c60d5b6e33ab94c38a59964af6be6ad60a84d498a00cc7e43a0a21dee122
 EBUILD phrack-65.ebuild 635 RMD160 92da1164476fe542b379b78befcd16c2835ff7fc SHA1 0ee3254b5bf536942168efe11a1b1efea158ba2e SHA256 6f9726e3cb4783b572ae32330e9b6ca00d655899772ec735e2192ce38d002957
-MISC ChangeLog 323 RMD160 c86dc605ca8c1cbffc2f8f95b721e1576e43cc8a SHA1 84565405e76cb30728b0d43f6c0413689defce0e SHA256 8d086b5fa35b3c76e0af3c29520c6ac7b6d0e7a259c2e2b1e005e76716b7ea6d
+EBUILD phrack-66.ebuild 636 RMD160 a9e23d329e680c7da82eaa8b14b33e744f08ebfe SHA1 fa9d3358916497dc64254768f366939b16bf50d0 SHA256 120890987420d22ee3d419f81b1aa47e2873f4721939c2f45d1353e1d89326d2
+MISC ChangeLog 448 RMD160 98cc7ebd83854ce1d6ec1914307d821eaa198efe SHA1 8c21c52f3c3a9e83b018cbf632cc5612ee7285ad SHA256 c918848bf876427f55302e1f4a1a4b7c977fb026680d4a1496d3fa77475635e6
 MISC metadata.xml 550 RMD160 ec5d09c3f554bb31775fc706bec8318904581b45 SHA1 249cd2c6850536494f09c52ff93e1c5192ff8ebd SHA256 6a483f122de0cc00a2307e6107d0fb9afbcbafc6af330cac91728efad4107715
